# projetM2

./: .gitignore  README.md  assembly_pipe_v1.ml  config_VM.sh  pipeline_v1.ml  projetM2.install  projetM2.opam  quality_annotation_with_blast.py  spades.ml  test.ml  test_pipeline.md
app/: .merlin  blast.ml  blast_treatment.ml  eval.ml  jbuild  pipeline_v1.ml  pipeline_v1_utop.ml  projetM2.ml  prokka2.ml  truc.ml  web.ml
cahier_des_charges/: 1_presentation_du_projet.aux  1_presentation_du_projet.tex  2_besoins.aux  2_besoins.tex  3_contraintes.aux  3_contraintes.tex  4_deroulement_du_projet.aux  4_deroulement_du_projet.tex  5_references.aux  5_references.tex  biblio.bib  cahier_des_charges.aux  cahier_des_charges.bbl  cahier_des_charges.blg  cahier_des_charges.out  cahier_des_charges.tex  cahier_des_charges.toc  couverture.aux  couverture.tex
docker-image/: Dockerfile  quality_annotation_with_blast.py
etc/: config_VM.sh  config_VM2.sh  duplicate_remover.py  install.sh
results/quast_results_Ref/: icarus.html  report.html  report.tex  report.tsv  report.txt  transposed_report.tex  transposed_report.tsv  transposed_report.txt
results/quast_results_Ref/contigs_reports/: alignments_spades_assembly.tsv  all_alignments_spades_assembly.tsv  contigs_report_spades_assembly.mis_contigs.info  contigs_report_spades_assembly.stderr  contigs_report_spades_assembly.stdout  misassemblies_report.tex  (+9 more)
results/quast_results_without_Ref/: icarus.html  report.html  report.tex  report.tsv  report.txt  transposed_report.tex  transposed_report.tsv  transposed_report.txt
(+8 files in other folders)
